Bug 570314. Don't crash when GetXULWindowWidget doesn't find one. r=roc